# job_freshness_tagging

./: .gitignore  AGENTS.md  README.md  package.json
backend/: .env.example  pyproject.toml
backend/scripts/: analyze_complaint_data.py  analyze_complaint_timing.py  analyze_full_complaint_timing.py  plot_complaint_timing.py
backend/sql/: fetch_freshness_candidates.sql  read_freshness_candidates.sql
backend/src/job_freshness/: __init__.py  audit.py  batch_scheduler.py  cache.py  data_fetcher.py  graph.py  graph_state.py  loader.py  main.py  rate_limit.py  schemas.py  settings.py  sql_template.py  text_cleaning.py
backend/src/job_freshness/api/: __init__.py  auth.py  data_source_router.py  routes.py  schemas.py  server.py  services.py
backend/src/job_freshness/llm/: client.py  result_handler.py
backend/src/job_freshness/nodes/final_decision/: __init__.py  parser.py  prompt_builder.py  service.py
backend/src/job_freshness/nodes/risk_assess/: __init__.py  parser.py  prompt_builder.py  (+1 more)
backend/src/job_freshness/prompts/: final_decision_v1.yaml  risk_assess_v1.yaml  signal_detection_v1.yaml  time_normalization_v1.yaml
backend/src/job_freshness/writers/: __init__.py  fallback_output.py  formal_output.py  jsonl_store.py  sqlite_store.py
backend/tests/integration/: __init__.py  test_freshness_dry_run.py
backend/tests/integration/fixtures/: expected_outputs.json  llm_responses.json  wide_rows.json
backend/tests/unit/: test_snippet_recall_service.py  test_text_cleaning.py
backend/tmp_online_query_smoke/: formal_output.jsonl  pipeline_results.sqlite3
(+28 files in other folders)
